examples/type_system/failing/113_keyword_alias_var.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

var x = 1
const y = 2
val z = 3
